--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: objective-c
-osx_image: xcode61
+osx_image: xcode611
 xcode_project: AeroGearOAuth2.xcodeproj
 xcode_scheme: AeroGearOAuth2Tests
 xcode_sdk: iphonesimulator
 
 before_install:
-    - gem install cocoapods -v 0.36.0.beta.1 --no-rdoc --no-ri --no-document --quiet
+    - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+
+script:
+    - set -o pipefail && xcodebuild -workspace AeroGearOAuth2.xcworkspace -scheme AeroGearOAuth2 -sdk iphonesimulator -configuration Release clean test
 
 notifications:
   irc: "irc.freenode.org#aerogear"
