remove -pre flag from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ xcode_scheme: AeroGearOAuth2Tests
 xcode_sdk: iphonesimulator
 
 before_install:
-    - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+    - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
 
 notifications:
   irc: "irc.freenode.org#aerogear"
