--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode63
+osx_image: beta-xcode6.3
 xcode_workspace: AeroGearOAuth2.xcworkspace
 xcode_scheme: AeroGearOAuth2Tests
 xcode_sdk: iphonesimulator
