xcode6.4 in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: objective-c
-osx_image: beta-xcode6.3
-xcode_workspace: AeroGearOAuth2.xcworkspace
-xcode_scheme: AeroGearOAuth2Tests
-xcode_sdk: iphonesimulator
+osx_image: xcode6.4
 
 before_install:
     - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
+
+script:
+    - set -o pipefail
+    - xcodebuild -workspace AeroGearOAuth2.xcworkspace -scheme AeroGearOAuth2Tests -sdk iphonesimulator -destination "OS=7.1,name=iPhone 4S" -configuration Release clean test
+    - xcodebuild -workspace AeroGearOAuth2.xcworkspace -scheme AeroGearOAuth2Tests -sdk iphonesimulator -destination "OS=8.4,name=iPhone 6 Plus" -configuration Release clean test
 
 notifications:
   irc: "irc.freenode.org#aerogear"
