--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: objective-c
-osx_image: xcode7
+osx_image: xcode7.3
 
 before_install:
-    - gem install cocoapods -v '1.0.1' --no-rdoc --no-ri --no-document --quiet
+    - gem install cocoapods -v '1.0.1' --quiet
 
 script:
     - set -o pipefail
