--- a/AeroGearOAuth2.xcodeproj/xcshareddata/xcschemes/AeroGearOAuth2.xcscheme
+++ b/AeroGearOAuth2.xcodeproj/xcshareddata/xcschemes/AeroGearOAuth2.xcscheme
@@ -1,62 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4833046C19AF1635002F8DA9"
-               BuildableName = "AeroGearOAuth2Tests.xctest"
-               BlueprintName = "AeroGearOAuth2Tests"
+               BlueprintIdentifier = "4833046119AF1635002F8DA9"
+               BuildableName = "AeroGearOAuth2.framework"
+               BlueprintName = "AeroGearOAuth2"
                ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4833046C19AF1635002F8DA9"
-               BuildableName = "AeroGearOAuth2Tests.xctest"
-               BlueprintName = "AeroGearOAuth2Tests"
-               ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4833046C19AF1635002F8DA9"
-            BuildableName = "AeroGearOAuth2Tests.xctest"
-            BlueprintName = "AeroGearOAuth2Tests"
-            ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
@@ -64,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4833046C19AF1635002F8DA9"
-            BuildableName = "AeroGearOAuth2Tests.xctest"
-            BlueprintName = "AeroGearOAuth2Tests"
+            BlueprintIdentifier = "4833046119AF1635002F8DA9"
+            BuildableName = "AeroGearOAuth2.framework"
+            BlueprintName = "AeroGearOAuth2"
             ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -74,17 +55,17 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4833046C19AF1635002F8DA9"
-            BuildableName = "AeroGearOAuth2Tests.xctest"
-            BlueprintName = "AeroGearOAuth2Tests"
+            BlueprintIdentifier = "4833046119AF1635002F8DA9"
+            BuildableName = "AeroGearOAuth2.framework"
+            BlueprintName = "AeroGearOAuth2"
             ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
