--- a/AeroGearOAuth2.xcodeproj/xcshareddata/xcschemes/AeroGearOAuth2 tvOS.xcscheme
+++ b/AeroGearOAuth2.xcodeproj/xcshareddata/xcschemes/AeroGearOAuth2 tvOS.xcscheme
@@ -4,7 +4,7 @@
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "NO">
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,45 +14,26 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4833046119AF1635002F8DA9"
-               BuildableName = "AeroGearOAuth2.framework"
-               BlueprintName = "AeroGearOAuth2 iOS"
+               BlueprintIdentifier = "6EDF04921D7B7B0A004949A0"
+               BuildableName = "AeroGearOAuth2 tvOS.framework"
+               BlueprintName = "AeroGearOAuth2 tvOS"
                ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4833046C19AF1635002F8DA9"
-               BuildableName = "AeroGearOAuth2Tests.xctest"
-               BlueprintName = "AeroGearOAuth2Tests"
-               ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4833046119AF1635002F8DA9"
-            BuildableName = "AeroGearOAuth2.framework"
-            BlueprintName = "AeroGearOAuth2 iOS"
-            ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -64,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4833046119AF1635002F8DA9"
-            BuildableName = "AeroGearOAuth2.framework"
-            BlueprintName = "AeroGearOAuth2 iOS"
+            BlueprintIdentifier = "6EDF04921D7B7B0A004949A0"
+            BuildableName = "AeroGearOAuth2 tvOS.framework"
+            BlueprintName = "AeroGearOAuth2 tvOS"
             ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -82,15 +63,15 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4833046119AF1635002F8DA9"
-            BuildableName = "AeroGearOAuth2.framework"
-            BlueprintName = "AeroGearOAuth2 iOS"
+            BlueprintIdentifier = "6EDF04921D7B7B0A004949A0"
+            BuildableName = "AeroGearOAuth2 tvOS.framework"
+            BlueprintName = "AeroGearOAuth2 tvOS"
             ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
