--- a/AeroGearOAuth2.xcodeproj/xcshareddata/xcschemes/AeroGearOAuth2 tvOS.xcscheme
+++ b/AeroGearOAuth2.xcodeproj/xcshareddata/xcschemes/AeroGearOAuth2 tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0800"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6EDF04921D7B7B0A004949A0"
-               BuildableName = "AeroGearOAuth2 tvOS.framework"
+               BuildableName = "AeroGearOAuth2.framework"
                BlueprintName = "AeroGearOAuth2 tvOS"
                ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6EDF04921D7B7B0A004949A0"
-            BuildableName = "AeroGearOAuth2 tvOS.framework"
+            BuildableName = "AeroGearOAuth2.framework"
             BlueprintName = "AeroGearOAuth2 tvOS"
             ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6EDF04921D7B7B0A004949A0"
-            BuildableName = "AeroGearOAuth2 tvOS.framework"
+            BuildableName = "AeroGearOAuth2.framework"
             BlueprintName = "AeroGearOAuth2 tvOS"
             ReferencedContainer = "container:AeroGearOAuth2.xcodeproj">
          </BuildableReference>
