--- a/circle.yml
+++ b/circle.yml
@@ -5,3 +5,7 @@ machine:
     XCODE_WORKSPACE: AeroGearOAuth2.xcworkspace
     XCODE_SCHEME: AeroGearOAuth2Tests
 
+test:
+  override:
+    - set -o pipefail && xcodebuild -workspace $XCODE_WORKSPACE -scheme $XCODE_SCHEME clean build      -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY= PROVISIONING_PROFILE= | tee $CIRCLE_ARTIFACTS/xcode_raw.log | xcpretty --color --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
+    - set -o pipefail && xcodebuild -workspace $XCODE_WORKSPACE -scheme $XCODE_SCHEME clean build test -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY= PROVISIONING_PROFILE= | tee $CIRCLE_ARTIFACTS/xcode_raw.log | xcpretty --color --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
