Change AeroGearOAuth2 -> TDConnectIosSdk in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: objective-c
-osx_image: xcode8.1
-xcode_workspace: AeroGearOAuth2.xcworkspace
-xcode_scheme: AeroGearOAuth2Tests
-xcode_sdk: iphonesimulator
 
-notifications:
-  irc: "irc.freenode.org#aerogear"
+osx_image: xcode8.1
+xcode_workspace: TDConnectIosSdk.xcworkspace
+xcode_scheme: TDConnectIosSdkTests
+xcode_sdk: iphonesimulator
 
 before_install:
   - travis_wait pod repo update
 
 script:
-  - xcodebuild -workspace AeroGearOAuth2.xcworkspace -scheme AeroGearOAuth2 -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' build
-  - xcodebuild -workspace AeroGearOAuth2.xcworkspace -scheme AeroGearOAuth2Tests -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' build test
+  - xcodebuild -workspace TDConnectIosSdk.xcworkspace -scheme TDConnectIosSdk -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' build
+  - xcodebuild -workspace TDConnectIosSdk.xcworkspace -scheme TDConnectIosSdkTests -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.1' build test
